<resources>
        <string name="deutsch" translatable="false">Deutsch</string>
    <string name="app_name">Umbrella Health</string>
    <string name="umbrella_corporation">UMBRELLA CORPORATION</string>
    <string name="umbrella">UMBRELLA</string>
    <string name="has_you_covered">has you covered</string>
    <string name="all_rights_reserved_by_phong_kaster">All rights reserved by UMBRELLA CORPORATION</string>
    <string name="no_account_register">Nếu chưa có tài khoản, hãy <b>đăng ký</b> ngay.</string>
    <string name="login_with_phone_number">Đăng nhập bằng số điện thoại</string>
    <string name="login">Nếu đã có tài khoản,  <b>đăng nhập</b> ngay.</string>
    <string name="vietnam_phone_prefix">+84</string>
    <string name="get_authorization_code">Nhập mã xác thực</string>
    <string name="or">Hoặc</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="phone_number_2">Số điện thoại:</string>
    <string name="my_phone_number">366253623</string>
    <string name="umbrella_health_phone_number">0835900084 – 02438693731 (7h đến 18h)</string>
    <string name="enter_your_verification_code">Nhập mã xác thực</string>
    <string name="confirm">Xác nhận</string>
        <string name="default_reason2">Đã đến lượt</string>
    <string name="verification_code">Mã xác thực</string>
    <string name="do_not_let_phone_number_empty">Không bỏ trống số điện thoại</string>
    <string name="only_enter_number_except_first_zero">Chỉ nhập các chữ số sau số 0</string>
    <string name="resend_verification_code">Gửi lại mã xác thực</string>
    <string name="do_not_receive_verification_code_try_again">Không nhận được mã xác thực? Hãy thử lại</string>
    <string name="empty_phone_number_or_verificationId">Số điện thoại hoặc mã xác thực bị trống</string>
    <string name="verification_failed">Xác minh thất bại!</string>
    <string name="loading">Loading</string>
    <string name="ok">OK</string>
    <string name="success">Thành công</string>
    <string name="add_account_info_successfully">Thêm thông tin tài khoản thành công</string>
    <string name="cancel">Hủy</string>
    <string name="attention">Chú ý</string>
    <string name="oops_there_is_an_issue">Oops! Đã xảy ra sự cố</string>
    <string name="login_successfully">Đăng nhập thành công</string>
    <string name="login_failed">Đăng nhập thất bại</string>
    <string name="login_with_google_successfully">Đăng nhập thành công với Google</string>
    <string name="check_your_internet_connection">Hãy kiểm tra kết nối internet</string>
    <string name="home">Trang chủ</string>
    <string name="notification">Thông báo</string>
    <string name="personality">Cá nhân</string>
    <string name="appointment">Lịch khám bệnh</string>
    <string name="are_you_sure_about_that">Bạn có chắc chắn?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="what_do_you_want_to_search_today">Bạn muốn tìm gì hôm nay?</string>
    <string name="general_examination">Khám xoang</string>
    <string name="heart_examination">Khám tim mạch</string>
    <string name="pregnant_examination">Khám sản khoa</string>
    <string name="covid19_examination">Xét nghiệm COVID 19</string>
    <string name="medical_test_examination">Xét nghiệm y học</string>
    <string name="tooth_examination">Khám nha khoa</string>
    <string name="eye_examination">Khám nhãn khoa</string>
    <string name="speciality_examination">Riềng răng</string>
    <string name="popular_specialities">Chuyên khoa phổ biến</string>
    <string name="read_more">Xem thêm</string>
    <string name="musculoskeletal">Cơ xương khớp</string>
    <string name="popular_doctors">Bác sĩ nổi bật</string>
    <string name="default_doctor_name">Bác sĩ Nguyễn Thành Phong</string>
    <string name="default_speciality">Ngoại khoa</string>
    <string name="default_price">Giá khám: 1.896.000 VND</string>
    <string name="app_description">Chào mừng đến Umbrella Health - Ứng dụng chăm sóc sức khỏe hàng đầu Việt Nam</string>
    <string name="app_short_description">Chào mừng đến Umbrella Health</string>
    <string name="it_is_your_turn">Sắp tới lượt khám của bạn rồi. Hãy chuẩn bị!</string>
    <string name="umbreall_health_is_running_in_background">Umbrella Health đang chạy ngầm</string>
    <string name="doctor_information">Thông tin bác sĩ</string>
    <string name="doctor_name">Bác sĩ:</string>
    <string name="default_personal_name">Nguyễn Thành Phong</string>
    <string name="speciality_name">Chuyên khoa:</string>
    <string name="speciality">Chuyên khoa</string>
    <string name="default_phone_number">0366253623</string>
    <string name="working_process">Quá trình công tác:</string>
    <string name="default_description"><![CDATA[\<p>- Hướng dẫn đặt t&ecirc;n file b&aacute;o c&aacute;o định kỳ:</p>\n\n<p>&nbsp; &nbsp; ** Lớp (m&atilde; chữ)_M&atilde; sinh vi&ecirc;n(3 số cuối)_Họ v&agrave; t&ecirc;n _BCDK1</p>\n\n<p>VD: AT_069_LuongMinhTien_BCĐK1</p>\]]></string>
    <string name="speciality_information">Thông tin chuyên khoa</string>
    <string name="description">Mô tả:</string>
    <string name="description2">Mô tả</string>
    <string name="doctor">Bác sĩ</string>
    <string name="all">Tất cả</string>
    <string name="service">Dịch vụ</string>
    <string name="image">Ảnh</string>
    <string name="title_activity_servicepage">ServicepageActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="service_information">Thông tin dịch vụ</string>
    <string name="create_booking">Tạo lịch hẹn</string>
    <string name="booking">Đặt lịch khám</string>
    <string name="default_service_name">Xét nghiệm định lượng kháng thể SARS-CoV-2</string>
    <string name="free_booking_fee">Miễn phí đặt lịch</string>
    <string name="bookingName">Họ tên người đặt lịch (Bắt buộc)</string>
    <string name="bookingName2">Họ tên người đặt lịch</string>
    <string name="bookingPhone">Số điện thoại người đặt lịch (Bắt buộc)</string>
    <string name="bookingPhone2">Số điện thoại người đặt lịch</string>
    <string name="patientName">Tên bệnh nhân (Bắt buộc)</string>
    <string name="patientName2">Tên bệnh nhân</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="gender">Giới tính</string>
    <string name="patientBirthday">Ngày sinh</string>
    <string name="patientAddress">Địa chỉ</string>
    <string name="patientReason">Lý do khám</string>
    <string name="appointmentDate">Ngày khám (Bắt buộc)</string>
    <string name="appointmentDate2">Ngày khám</string>
    <string name="appointmentTime">Thời gian khám (Bắt buộc)</string>
    <string name="appointmentTime2">Thời gian khám mong muốn</string>
    <string name="please_fulfill_mandatory_information">Quý khách vui lòng điền đầy đủ thông tin để tiết kiệm thời gian làm thủ tục khám</string>
    <string name="note">Lưu ý</string>
    <string name="note_1">1. Thông tin anh chị cung cấp sẽ được sử dụng làm hồ sơ khám bệnh, khi điền thông tin anh/chị vui lòng:</string>
    <string name="note_2">\t* Ghi rõ họ và tên, viết hoa những chữ cái đầu tiên, ví dụ: <b>Nguyễn Thành Phong</b></string>
    <string name="note_3">\t* Điền đầy đủ, đúng và vui lòng kiểm tra lại thông tin trước khi ấn Xác nhận</string>
    <string name="note_4">2. Anh/chị vui lòng tuân thủ quy định phòng chống dịch (đeo khẩu trang, khử khuẩn, khai báo dịch tễ) khi đến khám.</string>
    <string name="note_5">Bằng việc xác nhận đặt khám, bạn đã hoàn toàn đồng ý với Điều khoản sử dụng dịch vụ của chúng tôi.</string>
    <string name="code_male">1</string>
    <string name="code_female">0</string>
    <string name="default_appointment_time">09:00</string>
    <string name="you_do_not_fill_mandatory_field_try_again">Bạn chưa cung cấp đầy đủ các thông tin bắt buộc. Xin vui lòng kiểm tra lại!</string>
    <string name="icon">ICON</string>
    <string name="booking_successfully">Đặt khám thành công!</string>
    <string name="if_it_is_the_first_time_you_have_exam">Nếu chưa nắm rõ quy trình khám bệnh tại Umbrella Heath. Hãy ấn nút bên dưới để xem hướng dẫn nha!</string>
    <string name="how_to_exam_in_umbrella_health">Hướng dẫn khám bệnh</string>
    <string name="open_with_google_map">Mở bằng Google Map</string>
    <string name="medical_examination_guide">Hướng dẫn đi khám</string>
    <string name="medical_examination_procedures">Quy trình làm thủ tục khám</string>
    <string name="attention_patient">Bệnh nhân lưu ý</string>
    <string name="umbrella_health_support_call_center">Tổng đài hỗ trợ của Umbrella Health</string>
    <string name="note_medical">Dưới đây là <b>hướng dẫn đi và hướng dẫn làm thủ tục</b> cho khách hàng đặt khám qua Umbrella Health</string>
    <string name="note_medical_1">1. Bạn đến Bệnh viện Bạch Mai, <b>78 Đường Giải Phóng, Phương Mai, Hoàng mai Hà Nội</b>. Lưu ý nơi gửi xe
        \n * Xe máy: bạn có thể gửi tại bãi gửi xe của bệnh viện
        \n * Ô tô: bạn có thể nhờ bảo về để được hướng dẫn chỗ gửi xe cách bệnh viện 150m
        \n 2. Bạn vào quầy đăng kí và <b>báo đã đặt khám qua Umbrella Health</b> để được ưu tiên hỗ trợ
    </string>
    <string name="mat_khau">*Mật khẩu phải thoả mãn những điều kiện sau :
    </string>
    <string name="toi_thieu_8_ki_tu">
         - Tối thiểu 8 kí tự
    </string>
    <string name="xac_nhan_mat_khau">
         - Mật khẩu không đồng nhất
    </string>
    <string name="note_attention_1">
        <b>Lưu ý </b>
        \n * Khi đến khám, bệnh nhân nên tuân thu nguyên tắc xếp hàng khi chờ khám, không chen lấn xô đẩy
        \n * Giữ gìn vệ sinh chung, đi nhẹ nói khẽ, và không gây xích mích tranh chấp tại bệnh viên
    </string>
    <string name="note_attention_2">
        <b>Lưu ý bệnh nhân cần mang theo các loại giấy tờ tùy thân khi đi khám</b>
        \n * Thẻ bảo hiểm y tết
        \n * Thẻ bảo hiểm nhân thọ/ phi nhân thọ
        \n * Chứng minh nhân dân đối với người lớn. Giấy khi sinh đối với trẻ em
    </string>
    <string name="default_datetime">2022-11-24 10:02:43</string>
    <string name="notifications">Thông báo</string>
    <string name="mark_all_as_read">Đánh đấu tất cả đã đọc</string>
    <string name="successful_action">Thao tác được thực hiện thành công!</string>
    <string name="at">lúc</string>
    <string name="back">Trở về</string>
    <string name="my_birthday">01–05–2022</string>
    <string name="my_address">14 Lý Tự Trọng, Bến Nghé, Quận 1, Thành phố Hồ Chí Minh</string>
    <string name="default_reason">Khám sức khỏe định kì</string>
    <string name="bookingStatus">Trạng thái lịch khám</string>
    <string name="processing">Đang xử lý</string>
    <string name="you_do_not_any_appointment">Bạn không có lịch hẹn khám nào sắp tới !</string>
    <string name="default_room">Khu A, tầng 1, phòng 102</string>
    <string name="default_position">Mã số khám bệnh: 1</string>
    <string name="remind_me">Đặt thông báo</string>
    <string name="done">Xong</string>
    <string name="your_position">Số thứ tự khám của bạn:</string>
    <string name="your_reason">Lý do khám:</string>
    <string name="you_will_get_notification_as_soon_as_your_turn">Bạn sẽ nhận thông báo khi tới lượt khám của mình</string>
    <string name="default_location">Khu A, tầng 1, phòng 112</string>
    <string name="numericalOrder">Số thứ tự lượt khám</string>
    <string name="appointment_information">Thông tin lượt khám</string>
    <string name="patient_numerical_order">Mã số bệnh nhân</string>
    <string name="default_date">27–11–2022</string>
    <string name="default_time">09:00</string>
    <string name="appointmentStatus">Trạng thái lượt khám</string>
    <string name="watch_medical_record">Xem bệnh án</string>
    <string name="watch_medical_treatment">Xem phác đồ điều trị</string>
</resources>